--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <style>
       @font-face {
         font-family: "Maison Neue";
-        src: url("./Fonts/MaisonNeue-Bold.ttf") format("truetype");
+        src: url("https://github.com/AgenceSYB/EIGHT_expert_comptable/blob/main/Fonts/MaisonNeue-Bold.ttf") format("truetype");
         font-weight: bold;
         font-style: normal;
       }
       @font-face {
         font-family: "Maison Neue";
-        src: url("./Fonts/MaisonNeue-Light.ttf") format("truetype");
+        src: url("https://github.com/AgenceSYB/EIGHT_expert_comptable/blob/main/Fonts/MaisonNeue-Light.ttf") format("truetype");
         font-weight: 300;
         font-style: normal;
       }
       @font-face {
         font-family: "Maison Neue";
-        src: url("./Fonts/MaisonNeue-Medium.ttf") format("truetype");
+        src: url("https://github.com/AgenceSYB/EIGHT_expert_comptable/blob/main/Fonts/MaisonNeue-Medium.ttf") format("truetype");
         font-weight: 500;
         font-style: normal;
       }
@@ -49,28 +49,28 @@
         <div>
           <p style="position: relative; font-size: 12px;">
             <img
-              src="assets/Home.svg"
+              src="https://raw.githubusercontent.com/AgenceSYB/EIGHT_expert_comptable/main/assets/Home.svg?token=GHSAT0AAAAAACLGLQG36Q363Z67X6E2YDZOZLO5K6Q"
               alt="Home logo"
               style="position: absolute; width: 16px; top: 0; left: -27.5px"
             />25 Rue du Buisson Prolongée, 59700 Marcq-en-Barœul
           </p>
           <p style="position: relative; font-size: 12px;">
             <img
-              src="assets/Phone.svg"
+              src="https://raw.githubusercontent.com/AgenceSYB/EIGHT_expert_comptable/main/assets/Phone.svg?token=GHSAT0AAAAAACLGLQG3VWB3NEFIEYTDPOZAZLO5LIA"
               alt="Phone logo"
               style="position: absolute; width: 16px; top: 0; left: -27.5px"
             />+33(0)6 68 00 31 03
           </p>
           <p style="position: relative; font-size: 12px;">
             <img
-              src="assets/Mail.svg"
+              src="https://raw.githubusercontent.com/AgenceSYB/EIGHT_expert_comptable/main/assets/Mail.svg?token=GHSAT0AAAAAACLGLQG225SSMZOPZ5H477S6ZLO5LPA"
               alt="Mail logo"
               style="position: absolute; width: 16px; top: 0; left: -27.5px"
             />a.cuquemelle@eight-conseils.fr
           </p>
           <p style="position: relative; font-size: 12px;">
             <img
-              src="assets/Web.svg"
+              src="https://raw.githubusercontent.com/AgenceSYB/EIGHT_expert_comptable/main/assets/Web.svg?token=GHSAT0AAAAAACLGLQG3J4SUTNDB7MHBFJBKZLO5LUQ"
               alt="Web logo"
               style="position: absolute; width: 16px; top: 0; left: -27.5px"
             />eight-conseils.fr
@@ -78,16 +78,16 @@
         </div>
         <div style="position: absolute; bottom: 15px; right: 30px; display: flex; gap: 10px;">
           <a href="https://www.linkedin.com/company/eight-conseils/">
-            <img src="assets/LinkedIn.svg" alt="Linkedin Logo" style="width: 26px;"/>
+            <img src="https://raw.githubusercontent.com/AgenceSYB/EIGHT_expert_comptable/main/assets/LinkedIn.svg?token=GHSAT0AAAAAACLGLQG22Q6BRKBE7AFDM47YZLO5MCQ" alt="Linkedin Logo" style="width: 26px;"/>
           </a>
-          <a>
-            <img src="assets/Facebook.svg" alt="Facebook Logo" style="width: 26px;"/>
+          <a href="https://eight-conseils.fr/">
+            <img src="https://raw.githubusercontent.com/AgenceSYB/EIGHT_expert_comptable/main/assets/Web%20Link.svg?token=GHSAT0AAAAAACLGLQG3CZMFR3H54GIJ7HLCZLO5MIQ" alt="Facebook Logo" style="width: 26px;"/>
           </a> 
         </div>
       </main>
       <aside>
         <img
-          src="assets/Eight Logo.svg"
+          src="https://raw.githubusercontent.com/AgenceSYB/EIGHT_expert_comptable/main/assets/Eight%20Logo.svg?token=GHSAT0AAAAAACLGLQG2L3YRM572TQKW4MMOZLO5KAA"
           style="height: 100%; width: 100%; object-fit: cover"
         />
       </aside>
